--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -26,9 +26,38 @@ body {
   font-size: 62.5%;
 }
 
-// Wrapper
-.wrapper {
+// Wrappers
+.wrapperHeader {
   width: 80%;
+}
+
+.wrapper {
+  width: 90%;
+}
+
+.wrapperHeader,
+.wrapper {
   max-width: 1240px;
   margin: 0 auto;
+}
+
+button,
+.projects a {
+  padding: 10px 30px;
+  cursor: pointer;
+  font-size: 1.6rem;
+  font-family: $baseFont;
+  color: $black;
+  background: linear-gradient(to right, green 50%, $white 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  border: 2px solid $black;
+  transition: all 0.3s ease;
+
+  &:hover,
+  &:focus {
+    background-position: left bottom;
+    border: 2px solid green;
+    color: $white;
+  }
 }
