--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,5 +1,9 @@
 // Fonts
-$temp: 'Roboto', sans-serif;
+$baseFont: 'Montserrat', sans-serif;
+$titleFont: 'Roboto Slab', serif;
+$heroFont: 'Manrope', sans-serif;
+
 
 // Colours
 $black: #000;
+$white: #FFF;
