--- a/styles/style.css
+++ b/styles/style.css
@@ -250,19 +250,50 @@ body {
   font-size: 62.5%;
 }
 
-.wrapper {
+.wrapperHeader {
   width: 80%;
+}
+
+.wrapper {
+  width: 90%;
+}
+
+.wrapperHeader,
+.wrapper {
   max-width: 1240px;
   margin: 0 auto;
+}
+
+button,
+.projects a {
+  padding: 10px 30px;
+  cursor: pointer;
+  font-size: 1.6rem;
+  font-family: "Montserrat", sans-serif;
+  color: #000;
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, green), color-stop(50%, #FFF));
+  background: linear-gradient(to right, green 50%, #FFF 50%);
+  background-size: 200% 100%;
+  background-position: right bottom;
+  border: 2px solid #000;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+button:hover, button:focus,
+.projects a:hover,
+.projects a:focus {
+  background-position: left bottom;
+  border: 2px solid green;
+  color: #FFF;
 }
 
 h1,
 h2,
 h3,
-h4,
 p,
 a {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #000;
 }
 
@@ -282,15 +313,40 @@ h1 span:nth-of-type(3) {
   font-size: 4rem;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(35%, rgba(2, 87, 2, 0.413)), color-stop(35%, transparent));
   background: linear-gradient(to top, rgba(2, 87, 2, 0.413) 35%, transparent 35%);
+  font-family: "Manrope", sans-serif;
 }
 
-header p {
+p {
   font-size: 1.6rem;
+  line-height: 1.2;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 3rem;
+}
+
+h4 {
+  font-size: 2.25rem;
+  font-family: "Roboto Slab", serif;
+  font-weight: 700;
+  letter-spacing: 1.25px;
+}
+
+.projectContainer p:first-of-type {
+  font-size: 1.4rem;
+}
+
+.projectContainer p:last-of-type {
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 header {
   background: #f4f6ff;
-  margin-bottom: 50px;
 }
 
 nav ul {
@@ -307,7 +363,7 @@ nav ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 20px 0 0 20px;
+  padding: 20px 0 0 50px;
 }
 
 nav li {
@@ -362,14 +418,128 @@ header span:first-of-type {
 .heroImage {
   margin: 100px 0 80px 0;
   max-width: 400px;
+  -webkit-box-shadow: 25px 25px rgba(0, 128, 0, 0.591);
+          box-shadow: 25px 25px rgba(0, 128, 0, 0.591);
+}
+
+h2 {
+  padding: 30px 0 100px 85px;
   position: relative;
 }
 
-.imageShadow {
-  width: 120%;
-  height: 120%;
-  background: green;
+h2:before {
+  content: '';
+  width: 80px;
+  height: 4px;
+  background: #000;
   position: absolute;
-  top: 0;
-  right: 0;
+  left: 0;
+  top: 50px;
+}
+
+.aboutMe {
+  background: #f1f1e8;
+}
+
+.aboutMe p {
+  padding-bottom: 100px;
+  width: 60%;
+}
+
+.aboutMe button {
+  margin-bottom: 60px;
+  width: 310px;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+.aboutMeContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: 0;
+      -ms-flex-pack: 0;
+          justify-content: 0;
+  -webkit-box-align: 0;
+      -ms-flex-align: 0;
+          align-items: 0;
+}
+
+h3 {
+  padding-bottom: 20px;
+}
+
+.projectContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: 0;
+      -ms-flex-align: 0;
+          align-items: 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-bottom: 100px;
+}
+
+.projectContainer:after {
+  content: '';
+  width: 95%;
+  height: 1px;
+  background: #000;
+  margin-top: 100px;
+}
+
+.projectImage {
+  margin-right: 50px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 250px;
+          flex: 1 1 250px;
+  max-width: 450px;
+}
+
+.projectInfo {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 400px;
+          flex: 1 1 400px;
+  max-width: 40%;
+}
+
+h4 {
+  padding-bottom: 5px;
+}
+
+.projects {
+  background: #f1f1e8;
+}
+
+.projects ul li:nth-of-type(2) .projectContainer,
+.projects ul li:nth-of-type(4) .projectContainer {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.projects ul li:nth-of-type(4) .projectContainer:after {
+  width: 0;
+  height: 0;
+}
+
+.projects .projectContainer p:last-of-type {
+  padding: 10px 0 30px 0;
+}
+
+.projects a:first-of-type {
+  margin-right: 5px;
 }
