--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -2,8 +2,12 @@
 $baseFont: 'Montserrat', sans-serif;
 $titleFont: 'Roboto Slab', serif;
 $heroFont: 'Manrope', sans-serif;
+// $baseFont: 'Lato', sans-serif;
 
 
 // Colours
 $black: #000;
 $white: #FFF;
+
+// Button Colour
+$button: #779a71;
