--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -4,7 +4,10 @@
 @import 'global';
 @import 'typography';
 @import 'header';
-@import 'main';
+@import 'about';
+@import 'projects';
+@import 'toolkit';
+@import 'contact';
 @import 'footer';
 @import 'mediaQueries';
 
