--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -1,6 +1,6 @@
 // Resetting default styles
 
-body, h1, h2, h3, h4, p, ul {
+body, h1, h2, h3, h4, h5, p, ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -22,13 +22,13 @@ a {
 }
 
 // Setting base font-size
-body {
+html {
   font-size: 62.5%;
 }
 
 // Wrappers
 .wrapperHeader {
-  width: 80%;
+  width: 85%;
 }
 
 .wrapper {
@@ -41,23 +41,52 @@ body {
   margin: 0 auto;
 }
 
+// Buttons and Links
 button,
 .projects a {
   padding: 10px 30px;
   cursor: pointer;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-family: $baseFont;
   color: $black;
-  background: linear-gradient(to right, green 50%, $white 50%);
+  background: linear-gradient(to right, $button 50%, $white 50%);
   background-size: 200% 100%;
   background-position: right bottom;
   border: 2px solid $black;
-  transition: all 0.3s ease;
+  transition: all 0.5s ease;
 
   &:hover,
   &:focus {
     background-position: left bottom;
-    border: 2px solid green;
+    border: 2px solid $button;
     color: $white;
   }
 }
+
+// Main Headings 
+h2 {
+  padding: 30px 0 0 150px;
+  position: relative;
+
+  &:before {
+    content: '';
+    width: 80px;
+    height: 4px;
+    border-radius: 6px;
+    background: $black;
+
+    position: absolute;
+    left: 40px;
+    top: 45px;
+  }
+}
+
+h2 {
+  padding-bottom: 100px;
+}
+
+
+// Temp background
+// body {
+//   background: #f1f1e8;
+// }
