--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -1,46 +1,7 @@
-// Main Headings 
-h2 {
-  padding: 30px 0 100px 85px;
-  position: relative;
-
-  &:before {
-    content: '';
-    width: 80px;
-    height: 4px;
-    background: $black;
-
-    position: absolute;
-    left: 0;
-    top: 50px;
-  }
-}
-
-// About Me Section 
-.aboutMe {
-  background: #f1f1e8;
-
-  p {
-    padding-bottom: 100px;
-    width: 60%;
-  }
-
-  button {
-    margin-bottom: 60px;
-    width: 310px;
-    align-self: flex-end;
-  }
-}
-
-.aboutMeContainer {
-  @include flex (column, 0, 0)
-}
-
-h3 {
-  padding-bottom: 20px;
-}
-
 // Projects Section
 .projectContainer {
+  // background: green;
+  // border-radius: 5px;
   @include flex (row, center, 0);
   flex-wrap: wrap;
   padding-bottom: 100px;
@@ -70,7 +31,7 @@ h4 {
 }
 
 .projects {
-  background: #f1f1e8;
+  background: #eeeeee;
 
   // Reversing every other project layout
   ul li:nth-of-type(2) .projectContainer,
@@ -93,4 +54,3 @@ h4 {
     margin-right: 5px;
   }
 }
-
