--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -2,63 +2,119 @@ h1,
 h2,
 h3,
 p,
-a {
+a,
+textarea,
+input,
+legend {
   font-family: $baseFont;
   color: $black;
 }
 
-// Navigation
+// Header ------>
+
+// Navigation Bar
 nav li {
-  font-size: 1.6rem;
+  font-size: 2rem;
 }
 
 // Hero statement
 h1 {
   span:nth-of-type(1) {
-    font-size: 2rem;
+    font-size: 3.5rem;
   }
 
   span:nth-of-type(2) {
-    font-size: 3rem;
+    font-size: 5rem;
   }
 
   span:nth-of-type(3) {
-    font-size: 4rem;
+    font-size: 6.5rem;
     background: linear-gradient(to top, rgba(2, 87, 2, 0.413) 35%, transparent 35%);
     font-family: $heroFont;
   }
 }
 
-p {
-  font-size: 1.6rem;
-  line-height: 1.2;
-}
-
-// Main
-
-h2 {
-  font-size: 2.5rem;
-}
-
-h3 {
+header p {
   font-size: 3rem;
 }
 
-h4 {
+// Main  ------>
+
+// Section Titles
+h2 {
+  font-size: 2.75rem;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 3.5rem;
+}
+
+// About Me Body Text
+p {
   font-size: 2.25rem;
+  line-height: 1.2;
+}
+
+// Projects -->
+
+// Titles
+h4 {
+  font-size: 3.5rem;
   font-family: $titleFont;
   font-weight: 700;
   letter-spacing: 1.25px;
 }
 
-// Projects
+// Body
 .projectContainer p:first-of-type {
-  font-size: 1.4rem;
+  font-size: 2rem;
 }
 
+// Tools
 .projectContainer p:last-of-type {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   font-weight: 600;
+}
+
+// Toolkit -->
+
+.toolkit ul p {
+  font-size: 2rem;
+}
+
+// Contact -->
+
+.connections {
+  p {
+    font-size: 2rem;
+    font-weight: 500;
+  }
+
+  a {
+    font-size: 2rem;
+    font-weight: 300;
+  }
+}
+
+.socials a {
+  font-size: 2.5rem;
+}
+
+input,
+textarea {
+  font-size: 1.6rem;
+}
+
+legend {
+  font-weight: 500;
+  font-size: 2rem;
+}
+
+// Footer ------>
+
+footer p {
+  font-size: 2rem;
 }
 
 
