--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -1,24 +1,42 @@
 // About Me Section 
 .about {
-  background: #f1f1e8;
+  background: #e7e8e7;
 
   p {
     padding-bottom: 100px;
-    width: 60%;
   }
 
   button {
-    margin-bottom: 60px;
     width: 310px;
+    height: 50px;
     align-self: flex-end;
   }
 
   h3 {
     padding-bottom: 20px;
   }
+
+  h2 {
+    padding-bottom: 100px;
+  }
 }
 
 .aboutContainer {
-  @include flex (column, 0, 0)
+  @include flex (row, space-between, 0);
+  flex-wrap: wrap;
 }
 
+.bioContainer {
+  max-width: 550px;
+}
+
+.bioContainer,
+.profilePic {
+  flex: 1 1 300px;
+}
+
+.profilePic {
+  max-width: 400px;
+  margin: 0 0 100px 50px;
+
+}
