--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -65,7 +65,7 @@ button,
 
 // Main Headings 
 h2 {
-  padding: 30px 0 0 150px;
+  padding: 30px 0 40px 150px;
   position: relative;
 
   &:before {
@@ -80,13 +80,3 @@ h2 {
     top: 45px;
   }
 }
-
-h2 {
-  padding-bottom: 100px;
-}
-
-
-// Temp background
-// body {
-//   background: #f1f1e8;
-// }
