--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -1,18 +1,12 @@
 // Projects Section
 .projectContainer {
-  // background: green;
-  // border-radius: 5px;
+  width: 80%;
+  background: #fbfffbd3;
+  border-radius: 5px;
   @include flex (row, center, 0);
   flex-wrap: wrap;
-  padding-bottom: 100px;
-
-  &:after {
-    content: '';
-    width: 95%;
-    height: 1px;
-    background: $black;
-    margin-top: 100px;
-  }
+  padding: 50px 0;
+  margin: 50px auto;
 }
 
 .projectImage {
@@ -31,7 +25,8 @@ h4 {
 }
 
 .projects {
-  background: #eeeeee;
+  padding-bottom: 100px;
+  background: linear-gradient(to bottom, #ffffffbb), url(../assets/fernsProjects.jpeg) no-repeat center / cover;
 
   // Reversing every other project layout
   ul li:nth-of-type(2) .projectContainer,
