--- a/styles/style.css
+++ b/styles/style.css
@@ -289,7 +289,7 @@ button:hover, button:focus,
 }
 
 h2 {
-  padding: 30px 0 0 150px;
+  padding: 30px 0 40px 150px;
   position: relative;
 }
 
@@ -302,10 +302,6 @@ h2:before {
   position: absolute;
   left: 40px;
   top: 45px;
-}
-
-h2 {
-  padding-bottom: 100px;
 }
 
 h1,
@@ -512,17 +508,16 @@ header p {
 }
 
 .about {
-  background: #f1f1e8;
+  background: #e7e8e7;
 }
 
 .about p {
   padding-bottom: 100px;
-  width: 60%;
 }
 
 .about button {
-  margin-bottom: 60px;
   width: 310px;
+  height: 50px;
   -ms-flex-item-align: end;
       align-self: flex-end;
 }
@@ -531,23 +526,48 @@ header p {
   padding-bottom: 20px;
 }
 
+.about h2 {
+  padding-bottom: 100px;
+}
+
 .aboutContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: 0;
-      -ms-flex-pack: 0;
-          justify-content: 0;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: 0;
       -ms-flex-align: 0;
           align-items: 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.bioContainer {
+  max-width: 550px;
+}
+
+.bioContainer,
+.profilePic {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 300px;
+          flex: 1 1 300px;
+}
+
+.profilePic {
+  max-width: 400px;
+  margin: 0 0 100px 50px;
 }
 
 .projectContainer {
+  width: 80%;
+  background: #fbfffbd3;
+  border-radius: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -563,15 +583,8 @@ header p {
           align-items: 0;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-bottom: 100px;
-}
-
-.projectContainer:after {
-  content: '';
-  width: 95%;
-  height: 1px;
-  background: #000;
-  margin-top: 100px;
+  padding: 50px 0;
+  margin: 50px auto;
 }
 
 .projectImage {
@@ -594,7 +607,9 @@ h4 {
 }
 
 .projects {
-  background: #eeeeee;
+  padding-bottom: 100px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ffffffbb)), url(../assets/fernsProjects.jpeg) no-repeat center/cover;
+  background: linear-gradient(to bottom, #ffffffbb), url(../assets/fernsProjects.jpeg) no-repeat center/cover;
 }
 
 .projects ul li:nth-of-type(2) .projectContainer,
