--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,9 +1,7 @@
 // Fonts
 $baseFont: 'Montserrat', sans-serif;
-$titleFont: 'Roboto Slab', serif;
-$heroFont: 'Manrope', sans-serif;
-// $baseFont: 'Lato', sans-serif;
-
+$heroFont: 'Playfair Display', serif;
+$titleFont: 'Playfair Display', serif;
 
 // Colours
 $black: #000;
@@ -11,3 +9,6 @@ $white: #FFF;
 
 // Button Colour
 $button: #779a71;
+
+// Background Colour
+$background: #dde4dd;
