--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -21,6 +21,11 @@ a {
   text-decoration: none;
 }
 
+button,
+a {
+  cursor: pointer;
+}
+
 // Setting base font-size
 html {
   font-size: 62.5%;
@@ -44,8 +49,7 @@ html {
 // Buttons and Links
 button,
 .projects a {
-  padding: 10px 30px;
-  cursor: pointer;
+  padding: 10px 15px;
   font-size: 2rem;
   font-family: $baseFont;
   color: $black;
@@ -63,20 +67,35 @@ button,
   }
 }
 
-// Main Headings 
-h2 {
-  padding: 30px 0 40px 150px;
-  position: relative;
+// Section Headings 
+.sectionTitle {
+  margin-bottom: 100px;
+  padding: 20px 0;
+  background: white;
+  text-align: center;
+}
 
-  &:before {
+h2 {
+  margin: 0 auto;
+  display: inline-block;
+  position: relative;
+  
+  &:before,
+  &:after {
     content: '';
     width: 80px;
-    height: 4px;
+    height: 2px;
     border-radius: 6px;
     background: $black;
-
     position: absolute;
-    left: 40px;
-    top: 45px;
+    top: 50%;
+  }
+  
+  &:before {
+    left: -100px;
+  }
+
+  &:after {
+    right: -100px;
   }
 }
