--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -1,23 +1,25 @@
-// Projects Section
+// Projects 
 .projectContainer {
-  width: 80%;
+  max-width: 95%;
   background: #fbfffbd3;
   border-radius: 5px;
-  @include flex (row, center, 0);
+  @include flex (row, center, center);
   flex-wrap: wrap;
-  padding: 50px 0;
+  padding: 50px 50px;
   margin: 50px auto;
 }
 
+// Images
 .projectImage {
-  margin-right: 50px;
-  flex: 1 1 250px;
+  flex: 1 1 300px;
+  min-width: 400px;
   max-width: 450px;
 }
 
+// Copy
 .projectInfo {
-  flex: 1 1 400px;
-  max-width: 40%;
+  flex: 1 1 300px;
+  max-width: 45%;
 }
 
 h4 {
@@ -25,7 +27,7 @@ h4 {
 }
 
 .projects {
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   background: linear-gradient(to bottom, #ffffffbb), url(../assets/fernsProjects.jpeg) no-repeat center / cover;
 
   // Reversing every other project layout
@@ -33,6 +35,17 @@ h4 {
   ul li:nth-of-type(4) .projectContainer {
     flex-direction: row-reverse;
   }
+
+  ul li:nth-of-type(1) .projectImage,
+  ul li:nth-of-type(3) .projectImage {
+    margin-left: 50px;
+  }
+
+  ul li:nth-of-type(2) .projectImage,
+  ul li:nth-of-type(4) .projectImage {
+    margin-right: 50px;
+  }
+
 
   ul li:nth-of-type(4) .projectContainer {
     &:after {
