--- a/styles/sass/_toolkit.scss
+++ b/styles/sass/_toolkit.scss
@@ -1,9 +1,8 @@
 .toolkit {
-  background: #e7e8e7;
+  background: $background;
 }
 .toolkitContainer {
-  padding-top: 40px;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   justify-items: center;
