--- a/styles/sass/_about.scss
+++ b/styles/sass/_about.scss
@@ -1,7 +1,7 @@
 // About Me Section 
 .about {
   padding-bottom: 100px;
-  background: $background;
+  background: linear-gradient(to bottom, #779a7128), url(../assets/handmadepaper.png) repeat;
 
   p {
     padding-bottom: 100px;
@@ -19,7 +19,7 @@
 }
 
 .aboutContainer {
-  @include flex (row, space-between, 0);
+  @include flex (row-reverse, space-between, 0);
   flex-wrap: wrap;
 }
 
@@ -33,10 +33,11 @@
 }
 
 .profilePic {
-  max-width: 400px;
+  max-width: 350px;
   margin: 0 0 0 50px;
   
   img {
-    box-shadow: 25px 15px $button;
+    box-shadow: 20px 10px $button;
+    border-radius: 3px;
   }
 }
