--- a/styles/sass/_toolkit.scss
+++ b/styles/sass/_toolkit.scss
@@ -1,5 +1,5 @@
 .toolkit {
-  background: $background;
+  background: linear-gradient(to bottom, #779a7128), url(../assets/handmadepaper.png) repeat;
 }
 .toolkitContainer {
   padding-bottom: 100px;
