--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -48,7 +48,8 @@ html {
 
 // Buttons and Links
 button,
-.projects a {
+.projects a,
+.about a {
   padding: 10px 15px;
   font-size: 2rem;
   font-family: $baseFont;
